--- a/css/drawings.css
+++ b/css/drawings.css
@@ -1,3 +1,209 @@
+/* divtober'23 - 30 - discontinued */
+.discontinued-container {
+  background: #0cda;
+}
+
+.discontinued {
+  font-size: 0.75vmin;
+  width: 80em;
+  height: 70em;
+  background: 
+    /* duct tape closing the door */
+    repeating-linear-gradient(45deg, #ff6 0 5%, #000 0 10%) 50% 63% / 19em 2em,
+    repeating-linear-gradient(45deg, #ff6 0 5%, #000 0 10%) 50% 80.5% / 19em 2em,
+    /* lines poster halloween */
+    radial-gradient(circle at 58em 40em, #ccc8 1%, #0000 0),
+    linear-gradient(to bottom right, #0000 48%, #0008 0 52%, #0000 0) 55em 40em / 3em 4em,
+    linear-gradient(to bottom left, #0000 49%, #0008 0 52%, #0000 0) 58em 40em / 6em 4em,
+    /* ropes */
+    linear-gradient(195deg, #0000 30%, brown 0 47%, #0000 0) 0.5em 3em / 3em 5em,
+    linear-gradient(130deg, #0000 32%, brown 0 45%, #0000 0) 97% 0.5em / 5em 5em,
+    linear-gradient(195deg, #0000 30%, brown 0 47%, #0000 0) 99.5% 9.75em / 5em 5em,
+    linear-gradient(brown 0 0) 0.5em 12em / 5em 1em,
+    /* top */
+    linear-gradient(#222 0 0) 0 1em / 100% 2em,
+    linear-gradient(#222 0 0) 0 13em / 100% 2em,
+    linear-gradient(#888 0 0) 50% 1em / 97% 13em,
+    /* decoration */
+    radial-gradient(60% 100% at 60% 0, #0001 99.9%, #0000 0) 5em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 12em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 19em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 26em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 33em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 40em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 47em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 54em 31.5em / 7em 5em,
+    radial-gradient(70% 100% at 50% 0, #0001 99.9%, #0000 0) 61em 31.5em / 7em 5em,
+    radial-gradient(60% 100% at 40% 0, #0001 99.9%, #0000 0) 68em 31.5em / 7em 5em,
+    radial-gradient(80% 100% at 50% 0, #f0f0f0 99.9%, #0000 0) 5em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #d21 99.9%, #0000 0) 12em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #f0f0f0 99.9%, #0000 0) 19em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #d21 99.9%, #0000 0) 26em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #f0f0f0 99.9%, #0000 0) 33em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #d21 99.9%, #0000 0) 40em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #f0f0f0 99.9%, #0000 0) 47em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #d21 99.9%, #0000 0) 54em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #f0f0f0 99.9%, #0000 0) 61em 23em / 7em 11em,
+    radial-gradient(80% 100% at 50% 0, #d21 99.9%, #0000 0) 68em 23em / 7em 11em,
+    linear-gradient(#000 0 0) 50% 21.5em / 89% 2em,
+    /* door */
+    repeating-linear-gradient(#ccc 0 4%, #aaa 0 8%) 46em 47.5em / 3.5em 5em,
+    linear-gradient(#0001 0 0) 45.5em 48em / 3.5em 5em,
+    linear-gradient(90deg, #fff 1.5em, #0000 0 18.5em, #fff 0) 50% 100% / 20em 40em,
+    linear-gradient(#fff 1.5em, #0000 0 19em, #8888 0 21em, #0000 0 38.5em, #fff 0) 50% 100% / 20em 40em,
+    linear-gradient(-45deg, #7bc 55%, #8cd 0 65%, #7bc 0 70%, #8cd 0 75%, #7bc 0) 50% 100% / 20em 40em,
+    /* window */
+    linear-gradient(90deg, #fff 1.5em, #0000 0 58.5em, #fff 0) 10em 30em / 60em 30em,
+    linear-gradient(#fff 1.5em, #0000 0 28.5em, #fff 0) 10em 30em / 60em 30em,
+    repeating-linear-gradient(-45deg, #7bc 0 10%, #8cd 0 16%, #7bc 0 18%, #8cd 0 20%, #7bc 0 30%) 10em 30em / 60em 30em,
+    /* bricks */
+    linear-gradient(#0002 0 0) 50% 20% / 97% 8%,
+    linear-gradient(#e51 0 0) 5em 64em / 4em 2em,
+    linear-gradient(#e05000 0 0) 7em 62em / 4em 2em,
+    linear-gradient(#e05000 0 0) 73em 66em / 4em 2em,
+    linear-gradient(#e51 0 0) 59em 64em / 4em 2em,
+    linear-gradient(#e05000 0 0) 55em 64em / 4em 2em,
+    linear-gradient(#e51 0 0) 57em 62em / 4em 2em,
+    linear-gradient(#e51 0 0) 3em 35em / 4em 2em,
+    linear-gradient(#e51 0 0) 74em 40em / 4em 2em,
+    linear-gradient(#e05000 0 0) 72em 42em / 4em 2em,
+    /* roof */
+    linear-gradient(#d40 0 0) 10% 12em / 3em 8em,
+    linear-gradient(#d40 0 0) 30% 12em / 3em 8em,
+    linear-gradient(#d40 0 0) 50% 12em / 3em 8em,
+    linear-gradient(#d40 0 0) 70% 12em / 3em 8em,
+    linear-gradient(#d40 0 0) 90% 12em / 3em 8em,
+    
+    linear-gradient(#c30 0 0) 2% 12em / 1em 6em,
+    linear-gradient(#c30 0 0) 20% 12em / 2em 6em,
+    linear-gradient(#c30 0 0) 40% 12em / 2em 6em,
+    linear-gradient(#c30 0 0) 60% 12em / 2em 6em,
+    linear-gradient(#c30 0 0) 80% 12em / 2em 6em,
+    linear-gradient(#c30 0 0) 98% 12em / 1em 6em,
+    /* base */
+    linear-gradient(#f62 0 0) 50% 100% / 97% 80%,
+    #f000;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 2em 0 -0.5em #555;
+}
+
+.discontinued::before {
+  content: "closed";
+  box-sizing: border-box;
+  font-size: 8em;
+  letter-spacing: 0.35em;
+  text-transform: uppercase;
+  font-family: helvetica, arial, sans-serif;
+  font-weight: bold;
+  padding-top: 0.435em;
+  color: #000;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background:
+    /* duct tape closing the door */
+    repeating-linear-gradient(45deg, #000 0 5%, #ff6 0 10%) 50% 54% / 2.5em 0.25em,
+    /* closed sign */
+    radial-gradient(circle at 6.5% 6%, #000 0.5%, #0000 0),
+    radial-gradient(circle at 93.5% 6%, #000 0.5%, #0000 0),
+    radial-gradient(circle at 6.5% 16.5%, #000 0.5%, #0000 0),
+    radial-gradient(circle at 93.5% 16.5%, #000 0.5%, #0000 0),
+    linear-gradient(#fd0 0 0) 50% 5% / 90% 14%,
+    linear-gradient(#0002 0 0) 40% 7% / 90% 14%,
+    /* poster on window */
+    repeating-linear-gradient(#ffd 0 10%, #cca 0 15%) 2.1em 5.6em / 0.8em 1em,
+    linear-gradient(#ffd 0 0) 2em 5.5em / 1em 1.2em,
+    linear-gradient(#0001 0 0) 1.97em 5.53em / 1em 1.2em
+    ;
+  background-repeat: no-repeat;
+  transform: rotate(-2deg);
+}
+
+.discontinued::after {
+  content: "Coming soon... \a Spirit Halloween!";
+  white-space: pre;
+  background: 
+    /* poster opening */
+    linear-gradient(#fd8 0 0) 81% 68% / 9em 5em,
+    /* duct tape closing the door */
+    repeating-linear-gradient(45deg, #000 0 5%, #ff6 0 10%) 53% 84% / 11.6em 1.25em,
+    #0000;
+  background-repeat: no-repeat;
+  font-size: 1.65em;
+  padding: 1em;
+  position: absolute;
+  text-align: center;
+  top: 60%;
+  left: 64%;
+  font-family: Arial, helvetica, sans-serif;
+  rotate: 4deg;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  padding: 26.9em 0 0 24.5em
+}
+
+/* divtober'23 - 29 - pin */
+.pin-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.pin {
+  font-size: 0.35vmin;
+  width: 70em;
+  height: 18em;
+  border-radius: 100% / 60% 100% 100% 60%;
+  box-shadow: inset 0 -1em, inset 0 1em;
+  background: 
+    radial-gradient(closest-side circle at 95.5% 50%, #0000 70%, #000 0 99.9%, #0000);
+  position: relative;
+  transform: rotate(30deg);
+}
+
+.pin::before {
+  content:"";
+  width: 25%;
+  height: 90%;
+  position: absolute;
+  border-radius: 100% / 100% 0 0 100%;
+  top: 47%;
+  left: -5%;
+  transform: translatE(0, -50%) rotate(3deg) scaleY(-1);
+  background: 
+    linear-gradient(90deg, #000 20%, #0000 0),
+    radial-gradient(farthest-side at 100% 0%, #0000 99%, #000) 40% 60% / 17% 15%,
+    radial-gradient(80% 60% at 70% 56%, #0000 40%, #000 40.5%) 27% 50% / 55% 100%,
+    linear-gradient(#000 0 0) 0 100% / 71.1% 35%,
+    conic-gradient(at 50% 130%, #000 30deg, #0000 30.5deg 345deg, #000 345.5deg) 100% 0 / 51% 60%,
+    radial-gradient(farthest-side at 0 100%, #000 99%, #0000) 101% 100% / 30% 35%;
+  background-repeat: no-repeat;
+}
+
+.pin.open::before {
+  box-shadow: 21em 10em 0 8em #fff;
+}
+
+.pin.open::after {
+  content: "";
+  width: 55%;
+  top: 1.5%;
+  left: 8%;
+  height: 1em;
+  position: absolute;
+  background: #000;
+  border-radius: 100% 0 0 100%;
+  transform-origin: 100% 0;
+  transform: rotate(6deg);
+}
+
 /* divtober'23 - 28 - handmade */
 .handmade {
   font-size: 0.5vmin;
